<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/history"
            android:enabled="true"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history"/>

        <item
            android:id="@+id/plans"
            android:enabled="true"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_plans"/>

        <item
            android:id="@+id/run"
            android:enabled="true"
            android:icon="@drawable/ic_run"
            android:title="@string/menu_start"/>


        <item
            android:id="@+id/achievments"
            android:enabled="true"
            android:icon="@drawable/ic_assessment"
            android:title="@string/menu_achievments"/>

        <item
            android:id="@+id/appInfo"
            android:enabled="true"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_appinfo"/>
</menu>