<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/fragment_app_info"
          android:paddingTop="80dp"
          android:paddingBottom="40dp"
          android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <LinearLayout
                android:id="@+id/fragment_settings_weight_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:id="@+id/fragment_settings_weight_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_weight_text_view"
                    android:gravity="center"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_weight_description_text_view"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:paddingTop="4dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_settings_location_precision_title"
                    android:gravity="center"
                    android:padding="10dp"/>
                <SeekBar
                    android:id="@+id/fragment_settings_location_precision_seek_baar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/settings_fragment_low_precission"
                        android:textSize="12sp"
                        android:padding="5dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/settings_fragment_medium_precission"
                        android:textSize="12sp"
                        android:padding="5dp"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/settings_fragment_high_precission"
                        android:textSize="12sp"
                        android:padding="5dp"
                        android:gravity="right"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
</LinearLayout>