<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:tools="http://schemas.android.com/tools"
          xmlns:map="http://schemas.android.com/apk/res-auto"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/fragment_app_info"
          android:paddingTop="100dp"
          android:paddingBottom="50dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/fragment_app_info_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_below="@+id/imageView3"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/fragment_app_info_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="2.0"
        android:gravity="center"
        android:layout_below="@+id/fragment_app_info_name_text_view"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:layout_marginTop="5dp" />


    <TextView
        android:id="@+id/fragment_app_info_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2018"
        android:gravity="center"
        android:layout_below="@+id/fragment_app_info_version"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/fragment_app_info_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appInfo1"
        android:layout_below="@id/fragment_app_info_year"
        android:layout_marginTop="20dp"
        android:padding="20dp" />

    <TextView
        android:id="@+id/fragment_app_info_description_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appInfo2"
        android:padding="20dp"
        android:layout_below="@+id/fragment_app_info_description"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/fragment_app_info_licenses"
        android:layout_below="@+id/fragment_app_info_description_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/fragment_app_info_licenses"
        style="@style/ButtonAccent"/>

    <Button
        android:id="@+id/fragment_app_info_policy_privacy"
        android:layout_below="@+id/fragment_app_info_licenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/fragment_app_info_policy_privacy"
        style="@style/ButtonAccent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_kotlin_powered"
            android:textSize="12sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_kotlin"/>
    </LinearLayout>



</RelativeLayout>