<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>
    <LinearLayout
        android:id="@+id/fragment_map_training_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/ColorPrimaryTransparent"
        android:layout_marginTop="80dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.00">
            <TextView
                android:id="@+id/fragment_Map_time_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_time"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="#ffffff"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/fragment_map_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_Map_time_label_text_view"
                android:textSize="32sp"
                android:text="@string/fragment_map_time_default_value"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/fragment_map_music_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_music"
                android:onClick="openMusicPlayer"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/gps_status_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_gps" />
                <ImageView
                    android:id="@+id/gps_status_dot_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gps_signal_dot"
                    android:layout_gravity="end|bottom" />
            </FrameLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/training_speed"
                    style="@style/TrainingInfoLabel"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_speed"/>
                        <TextView
                            android:id="@+id/fragment_map_speed_text_view"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            style="@style/TrainingInfoValue"
                            android:text="@string/fragment_map_speed_default_value"/>
                        <TextView
                            android:id="@+id/fragment_map_speed_sufix_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TrainingInfoValue"
                            android:text="@string/fragment_map_speed_sufix"/>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/training_distance"
                    style="@style/TrainingInfoLabel"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_distance"/>
                        <TextView
                            android:id="@+id/fragment_map_distance_text_view"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            style="@style/TrainingInfoValue"
                            android:text="@string/fragment_map_distance_default_value"/>
                        <TextView
                            android:id="@+id/fragment_map_distance_sufix_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TrainingInfoValue"
                            android:text="@string/fragment_map_distance_sufix_text_view"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/training_calories"
                    style="@style/TrainingInfoLabel"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_calories"/>
                        <TextView
                            android:id="@+id/fragment_map_calories_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            style="@style/TrainingInfoValue"
                            android:text="@string/fragment_map_calories_default_value"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/fragment_map_training_settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:animateLayoutChanges="true">
            <TextView
                android:id="@+id/fragment_map_activity_type_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/fragment_map_current_activity"
                android:textSize="12sp"
                android:gravity="start"
                style="@style/TrainingType"/>
            <TextView
                android:id="@+id/fragment_map_training_type_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/fragment_map_active_training"
                android:textSize="12sp"
                android:gravity="end"
                style="@style/TrainingType"/>
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fragment_map_training_state_button"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_go"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fragment_map_training_stop_button"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_stop"
            app:backgroundTint="@color/red"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"/>

    </FrameLayout>

</FrameLayout>

